# tgcryptfs

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIG_V2.md  DISTRIBUTED_ARCHITECTURE.md  SECURITY.md
examples/: README.md  config-v2-distributed.yaml  config-v2-master-replica.yaml  config-v2-standalone.yaml
scripts/: tgcryptfs-sync.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/cache/: lru.rs  mod.rs
src/chunk/: mod.rs
src/crypto/: encryption.rs  keys.rs  mod.rs
src/distributed/: crdt.rs  identity.rs  mod.rs  namespace.rs  replication.rs  types.rs  vector_clock.rs
src/fs/: filesystem.rs  mod.rs
src/fs/overlay/: config.rs  filesystem.rs  whiteout.rs
src/metadata/: hardlinks.rs  mod.rs  store.rs  xattr.rs
src/raid/: config.rs  erasure.rs  health.rs  mod.rs  pool.rs  stripe.rs
src/snapshot/: snapshot.rs
src/telegram/: client.rs
